--- a/src/components/Template/Input.sass
+++ b/src/components/Template/Input.sass
@@ -6,6 +6,9 @@ input
     width: 100%
     box-sizing: border-box
     margin-bottom: 16px
+    color: var(--text)
+    &::placeholder
+        color: var(--placeholder)
     &:focus
         outline: none
         border-color: var(--secondary-color)
