--- a/src/index.sass
+++ b/src/index.sass
@@ -1,14 +1,5 @@
+@import sass/_variables.sass
 @import sass/_utils.sass
-
-:root
-	--dark-grey: #333
-	--ligth-grey: #4c4c4c
-	--app-bg-color: #dfdfdf
-	--secondary-color: #7397ff
-	--label: #a3a3a3
-	--danger-color: #ff5c5c
-
-$secondary-color: #7397ff	
 
 *,
 **::before,
@@ -113,8 +104,6 @@ h1
 						td
 							padding: 1rem
 							border-bottom: 1px solid var(--secondary-color)
-							// &:last-child
-							// 	border-bottom: none
 
 	.content-footer
 		display: flex
