--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,6 +1,7 @@
 :root
     --dark-grey: #333
-    --ligth-grey: #4c4c4c
+    --grey: #4c4c4c
+    --light-grey: #b6b6b6
     --app-bg-color: #dfdfdf
     --secondary-color: #7397ff
     --danger-color: #ff5c5c
